--- a/docker/apache.conf
+++ b/docker/apache.conf
@@ -5,11 +5,11 @@ LoadModule rewrite_module modules/mod_rewrite.so
 <VirtualHost *:80>
     ServerAdmin webmaster@thanhnb.xyz
     ServerName localhost
-    DocumentRoot /var/www/html/public
+    DocumentRoot /var/www/html
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    <Directory /var/www/html/public>
+    <Directory /var/www/html>
         AllowOverride All
         Options FollowSymlinks
         Order allow,deny
